# connect_four

./: CMakeLists.txt  DQL.cpp  DQN.cpp  MCTS.cpp  README.md  a.txt  calc_elo.sh  game.cpp  game.h  main.cpp  mcts.txt  misc.cpp  other_bots.cpp  plot.py  ranking.sh  saving.txt
MCTS/: 10_100_r.txt
MCTS/games/: RANKING.txt
MCTS/iterations/: RANKING.txt
MCTS/simulations/: RANKING.txt
MCTS_plot/games/: RANKING.txt
MCTS_plot/games2/: RANKING.txt
MCTS_plot/it*sim/: RANKING.txt
MCTS_plot/iterations/: RANKING.txt
bash_scrips/: calc_elo.sh  create_mcts.sh  eval_dql.sh  ranking.sh  reset_elo.sh  run_calc_elo.sh
bash_scripts/: calc_elo.sh  create_dqn.sh  create_mcts.sh  eval_dqn.sh  ranking.sh  run_find_bp.sh
data/DQN/: bot.txt
data/MCTS/: bot.txt
data/MCTS_plot/games/: RANKING.txt
data/MCTS_plot/games1/: RANKING.txt
data/MCTS_plot/it*sim/: RANKING.txt
data/MCTS_plot/iterations/: RANKING.txt
data/MCTS_plot/simulations/: RANKING.txt
src/: game.h  includes.h  misc.cpp  other_bots.cpp
src/DQL/: DQL.cpp  DQL.cu  bp.py  main.cpp  main.cu
src/DQN/: DQN.cpp  DQN.cu  bp.py  main.cpp
src/MCTS/: MCTS.cpp  main.cpp
src/fast_game/: main.cpp
src/game/: SDL.h  game.cpp  game.h  main.cpp  screens.cpp
src/neuralnetwork/: Network.cu  Network.h  layer.cu  misc.cu
